@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Allow CGI mapshape and imgshape variables to consume WKT strings (#3185)
+
 - Added support for nautical miles unit (#3173)
 
 - Fixed encoding metadata ignored by a few wcs/wfs 1.1 and sos requests (#3182)
